# TestQMLModules

./: CMakeLists.txt
Foo/Bar/: CMakeLists.txt  foobar.cpp  foobar.h
example/: CMakeLists.txt  Main.qml  example.cpp
